tests/baselines/reference/thisBinding.errors.txt
thisBinding.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
thisBinding.ts(9,8): error TS2339: Property 'e' does not exist on type 'I'.


==== thisBinding.ts (2 errors) ====
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface I {
    	z;
        }
    
        export class C {
    	public x=0;
    	f(x:I) {
    	    x.e;  // e not found
    	      ~
!!! error TS2339: Property 'e' does not exist on type 'I'.
    	    x.z;  // ok 
    	}
        constructor() {
    	({z:10,f:this.f}).f(<I>({}));
        }
        }
    }
    
    class C {
        f(x: number) {
        }
    }